# pipewarden

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  VERSIONING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
container/: Dockerfile  action.yml  entrypoint.sh
demo-nodejs/: index.js
docs/: container-visibility-plan.md  multi-job-workflows.md
examples/: container-mode-workflow.yml  monitored-workflow.yml  multi-job-workflow.yml  network-policy.yml  normal-workflow.yml
native-proxy/: README.md  env_vars.py  iptables_rules.py  log_parser.py  setup.sh  teardown.sh
policy/: __init__.py  matcher.py  models.py  parser.py
proxy/: Dockerfile  __init__.py  addon.py  dns_server.py  proxy-entrypoint.sh  requirements-lock.txt  requirements.txt
requirements/: requirements-lock.txt  requirements.txt
runner/: Dockerfile
scripts/: count_blocked.py  fail_fast_watcher.py  generate_ca.py  generate_report.py  generate_sarif.py  ip_enrichment.py  policy_analysis.py  policy_hints.py  post_github_comment.py  resolve_policy.py  update-lock-files.sh  workflow_injector.py
tests/: conftest.py  test_action.py  test_addon.py  test_dns_server.py  test_fail_fast_watcher.py  test_generate_ca.py  test_generate_sarif.py  test_ip_enrichment.py  test_iptables_rules.py  test_log_parser.py  test_matcher.py  test_models.py  test_native_env.py  test_parser.py  test_policy_analysis.py  test_policy_hints.py  test_report.py  test_resolve_policy.py  test_workflow_injector.py
(+21 files in other folders)
